Fix visual clipping when yMin and yMax are used
Needed to completely rework the marker system and it's a bit of a cludge
trying to maintain safari compat.

--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 .saucechart {
     --transition-duration: 400ms;
-    --tooltip-transition-duration: 200ms;
+    --tooltip-transition-duration: 100ms;
     --axis-padding: 0.3em;
     touch-action: none;
     -webkit-touch-callout: none;
