--- a/css/line.css
+++ b/css/line.css
@@ -1,31 +1,82 @@
 @import 'common.css';
 
-.saucechart > svg.sc-root {
-    .sc-data {
-        transition-property: d;
-        transition-timing-function: linear;
-        transition-duration: var(--transition-duration);
+
+.saucechart.sc-linechart {
+    --line-stroke-width: 0.1em;
+    --marker-radius: 0.14em;
+    --marker-stroke-width: 0.04em;
+
+    &:not(.sc-brush-active) .sc-brush {
+        display: none;
     }
 
-    .sc-visual-data-line {
-        stroke: hsl(from var(--fg-color) h s calc(l + (15 * var(--shade-dir))) / 0.8);
-        fill: none;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-    }
+    > svg.sc-root {
+        .sc-data {
+            transition-property: d;
+            transition-timing-function: linear;
+            transition-duration: var(--transition-duration);
+        }
 
-    .sc-visual-data-segment {
-        transition-property: x, y, width, height;
-        transition-timing-function: linear;
-        transition-duration: var(--transition-duration);
-    }
-
-    .sc-line-marker {
-        circle.sc-dot {
-            r: 0.12em;
-            stroke-width: 0.04em;
+        .sc-visual-data-line {
             stroke: hsl(from var(--fg-color) h s calc(l + (15 * var(--shade-dir))) / 0.8);
-            fill: hsl(from var(--fg-color) h s calc(l + (50 * var(--shade-dir))) / 0.8);
+            fill: none;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+
+        .sc-visual-data-line-markers {
+            fill: none;
+        }
+
+        .sc-visual-data-line,
+        .sc-visual-data-line-markers {
+            font-size: 1em !important;  /* clip calcs depend on em being consistent with parent svg */
+            stroke-width: var(--line-stroke-width);
+        }
+
+        .sc-visual-data-area,
+        .sc-line-clip {
+            x: var(--plot-inset-left);
+            y: calc(var(--plot-inset-top) - (var(--line-stroke-width) / 2));
+            width: var(--plot-width);
+            height: calc(var(--plot-height) + (var(--line-stroke-width) / 2));
+        }
+
+        .sc-marker-line-clip {
+            x: var(--plot-inset-left);
+            y: calc(var(--plot-inset-top) - var(--marker-radius) - var(--marker-stroke-width) / 2);
+            width: var(--plot-width);
+            height: calc(var(--plot-height) + var(--marker-radius) + var(--marker-stroke-width) / 2);
+        }
+
+        .sc-visual-data-segment {
+            transition-property: x, y, width, height;
+            transition-timing-function: linear;
+            transition-duration: var(--transition-duration);
+        }
+
+        .sc-line-marker {
+            circle.sc-dot {
+                r: var(--marker-radius);
+                stroke-width: var(--marker-stroke-width);
+                stroke: hsl(from var(--fg-color) h s calc(l + (15 * var(--shade-dir))) / 0.8);
+                fill: hsl(from var(--fg-color) h s calc(l + (50 * var(--shade-dir))) / 0.8);
+            }
+        }
+
+        .sc-brush {
+            .sc-brush-mask {
+                stroke-width: 0.04em;
+                stroke: hsl(from var(--fg-color) h s calc(l + (15 * var(--shade-dir))) / 0.8);
+                fill: hsl(from var(--fg-color) h s calc(l + (50 * var(--shade-dir))) / 0.2);
+            }
+
+            .sc-brush-handle {
+                stroke-width: 0.2em;
+                stroke-linecap: round;
+                stroke-dasharray: 0.4em;
+                stroke: hsl(from var(--fg-color) h s calc(l + (15 * var(--shade-dir))) / 0.8);
+            }
         }
     }
 }
